# pumipush

./: .gitignore  7k_mesh.cpn  CMakeLists.txt  config-cuda.sh  config-omp.sh  config.sh  load.sh  make_cpn.ipynb  pseudo3D.cpp  pseudoMC.cpp  pumipush-test.cpp  pumipush.cpp  pumipush.h  stich_pvtus.py  test_calculations.ipynb
meshes/: partitionedCylinder.geo  square.geo
tests/: test.cpn
